<?xml version="1.0" encoding="utf-8"?>
<layout>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/backgroundColor"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/update_name"
            android:layout_gravity="center"
            android:textColor="@color/memo_background_color_new"
            android:textSize="20sp"
            android:textStyle="bold"
             />

        <EditText
            android:id="@+id/ed_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/spinner_style"
            android:padding="12dp"
            android:hint="@string/first_name"
            />

        <EditText
            android:id="@+id/ed_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/spinner_style"
            android:layout_margin="10dp"
            android:padding="12dp"
            android:hint="@string/last_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginEnd="1dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/update"
                android:background="@null"
                android:textColor="@color/memo_background_color_new"
                />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/cancel"
                android:background="@null"
                android:textColor="@color/memo_background_color_new"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
</layout>
<!--    android:background="@drawable/et_custom"-->
