<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
     android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="start|center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="7dp"
                android:src="@drawable/ic_memo_logo" />
                android:layoutDirection="locale"
                 />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addContact"
                android:textStyle="bold"
                android:textColor="@color/cardview_light_background"
                android:textSize="17sp" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <TextView
                android:id="@+id/nameAddContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="textPersonName"
                />
            <TextView
                android:id="@+id/numberAddContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="phone"
                android:textStyle="bold"
                android:hint="@string/Mobile"
                />

            <Button
                android:id="@+id/btnAddContact"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_background"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>





</androidx.cardview.widget.CardView>