<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/backgroundColor"
    tools:context=".views.VerificationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_memo"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/verifictionText"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/et_verifiction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/verifiction_code"
        android:layout_below="@+id/text"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="number"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_verification"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_verifiction"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom_blue_back"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/verifiction"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/orText"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/btn_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/roboto_regular"
        android:textSize="15sp"
        android:textColor="@color/memo_background_color_new">

    </TextView>

    <TextView
        android:id="@+id/btn_resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/resend"
        android:textColor="@color/memo_background_color_new" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_resendCode"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/line_green" />

    <!--    <ImageView-->
    <!--        android:layout_width="30dp"-->
    <!--        android:layout_height="30dp"-->
    <!--        android:src="@drawable/ic_arrow_right"-->
    <!--        android:layout_above="@id/swipeRight"-->
    <!--        android:layout_centerHorizontal="true"/>-->



</RelativeLayout>